added some html and css files

--- a/popup.html
+++ b/popup.html
@@ -1,3 +1,29 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>LitFit</title>
+    <link rel="stylesheet" href="popup.css">
+    <script src="background.js"></script>
+
+</head>
+<body>
+    <div class="container">
+        <div class="header">
+            <h1 id="title">LitFit</h1>
+        </div>
+        <div class="topics">
+            <p class="subheader" id="sub1">hi1</p>
+            <!-- progress bar -->
+            <p class="subheader" id="sub2">hi2</p>
+            <!-- progress bar -->
+            <p class="subheader" id="sub3">hi3</p>
+            <!-- progress bar -->
+        </div>
+
+        <div class="recommended_reading">
+            <p class="recommended">Recommended Reading:</p>
+            <p class="reading"></p>
+        </div>
+    </div>
+</body>
 </html>
