getArticleText() is now working

--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,8 @@
 <head>
     <title>LitFit</title>
     <link rel="stylesheet" href="popup.css">
+    <script src="jquery-2.1.1.js"></script>
+    <script src="text_extract.js"></script>
     <script src="background.js"></script>
 
 </head>
